Fix: fingerprint filter 추가로 중복제거

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -2,7 +2,7 @@ input {
 	file{
 		path => "/usr/share/logs/*.log"
 		start_position => "beginning"
-                codec => "json"
+        codec => "json"
 	}
 }
 
@@ -10,6 +10,11 @@ filter {
   json {
     source => "message"
     remove_field => "message"
+  }
+  fingerprint{
+    source => ["@timestamp", "thread"]
+    target => "document_id"
+    method => "SHA256"
   }
 }
 
